--- a/test5_a2.html
+++ b/test5_a2.html
@@ -15,7 +15,7 @@
               <h2 id="score">당신은 차가운 사람이군요!</h2>
               <div class="buttons">
                  <button class="btn" onclick="location.href='test5_q.html'">다시하기</button>
-                 <button class="btn" onclick="location.href='test5_index.html'">처음으로</button>
+                 <button class="btn" onclick="location.href='index.html'">처음으로</button>
               </div>
 
               <footer>
